Add script to sync code changes from Git

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
+# MongoDB Configuration
+MONGODB_URL=mongodb://localhost:27017
+
 # Jira Configuration
 JIRA_URL=https://your-company.atlassian.net
 JIRA_USERNAME=your-email@company.com
 JIRA_API_TOKEN=your-jira-api-token
 
-# GitHub Configuration
-GITHUB_TOKEN=your-github-personal-access-token
+# Git Configuration
+GIT_REPOS_PATH=/path/to/your/git/repositories
 
 # OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key
