--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ GIT_REPOS_PATH=/path/to/your/git/repositories
 
 # OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key
+OPENAI_BASE_URL=https://api.openai.com/v1
+OPENAI_MODEL=gpt-4
+
+# MCP Server Configuration (optional)
+# For enhanced code analysis using Model Context Protocol server
+# This can be any MCP-compatible server that provides code context
+MCP_SERVER_URL=https://your-mcp-server-url-here
