--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-# Core dependencies for AskMongoJIRA
-jira==3.10.5
-openai==2.6.0
-motor==3.7.1
-
-# Additional utilities
-python-dotenv==1.1.1
-requests==2.32.5
+# Core dependencies
 GitPython==3.1.45
+jira==3.10.5
+motor==3.7.1
+openai==2.8.0
+python-dotenv==1.2.1
+requests==2.32.5
 tomli==2.3.0
 
 # Development tools
